updated base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://cloudfamily.github.io/CloudFamily/"
+baseURL = "https://cloudfamily.info"
 languageCode = "en-US"
 defaultContentLanguage = "en"
 
