--- a/themes/hugo-theme-learn/exampleSite/config.toml
+++ b/themes/hugo-theme-learn/exampleSite/config.toml
@@ -15,6 +15,7 @@ defaultContentLanguageInSubdir= true
   showVisitedLinks = true
   disableBreadcrumb = false
   disableNextPrev = false
+  disableLandingPageButton = true
   disableMermaid = false
   customMermaidURL = "https://unpkg.com/mermaid@8.8.0/dist/mermaid.min.js"
   titleSeparator = "::"
@@ -27,6 +28,8 @@ home = [ "HTML", "RSS", "JSON"]
 title = "Documentation for Hugo Learn Theme"
 weight = 1
 languageName = "English"
+landingPageURL = "/en"
+landingPageName = "<i class='fas fa-home'></i> Home"
 
 [[Languages.en.menu.shortcuts]]
 name = "<i class='fab fa-fw fa-github'></i> GitHub repo"
@@ -54,6 +57,8 @@ weight = 30
 title = "Documentation du thème Hugo Learn"
 weight = 2
 languageName = "Français"
+landingPageURL = "/fr"
+landingPageName = "<i class='fas fa-home'></i> Accueil"
 
 [[Languages.fr.menu.shortcuts]]
 name = "<i class='fab fa-fw fa-github'></i> Repo GitHub"
@@ -81,6 +86,8 @@ weight = 30
 title = "Hugo 主题的 Learn 文档"
 weight = 3
 languageName = "简体中文"
+landingPageURL = "/zh"
+landingPageName = "<i class='fas fa-home'></i> 家"
 
 [[Languages.zh.menu.shortcuts]]
 name = "<i class='fab fa-fw fa-github'></i> GitHub 仓库"
