--- a/config.toml
+++ b/config.toml
@@ -28,33 +28,33 @@ weight = 1
 languageName = "English"
 
 [[Languages.en.menu.shortcuts]]
-name = "<i class='fab fa-fw fa-github'></i> GitHub repo"
+name = "<i class='fab fa-fw fa-github' style='width:19px; text-align:center'></i> GitHub repo"
 identifier = "ds"
 url = "https://github.com/CloudFamily"
 weight = 10
 
 [[Languages.en.menu.shortcuts]]
-name = "<i class='fas fa-fw fa-camera'></i> Learning "
+name = "<i class='fas fa-fw fa-camera' style='width:19px; text-align:center'></i> Learning "
 url = "showcase"
 weight = 12
 
 
 [[Languages.en.menu.shortcuts]]
-name = "<i class='far fa-window-maximize'></i> Blogs"
+name = "<i class='far fa-window-maximize' style='width:19px; text-align:center'></i> Blogs"
 url = "blogs"
 weight = 11
 
 [[Languages.en.menu.shortcuts]]
-name = "<i class='far fa-window-maximize'></i> Projects"
+name = "<i class='far fa-window-maximize' style='width:19px; text-align:center'></i> Projects"
 url = "projects"
 weight = 28
 
 # [[Languages.en.menu.shortcuts]]
-# name = "<i class='fas fa-fw fa-bullhorn'></i> Credits"
+# name = "<i class='fas fa-fw fa-bullhorn' style='width:19px; text-align:center'></i> Credits"
 # url = "/credits"
 # weight = 30
 
 [[Languages.en.menu.shortcuts]]
-name = "<i class='fab fa-youtube'></i> YouTube"
+name = "<i class='fab fa-youtube' style='width:19px; text-align:center'></i> YouTube"
 url = "https://www.youtube.com/channel/UCJFJM2L164fIhLqe1MdOv9w"
 weight = 29
